# listenbury

./: .env.example  .gitignore  BUGS.md  Cargo.toml  README.md  build.rs  daringsby  docker-compose.yml  justfile
.cargo/: config.toml
.github/workflows/: rescan.yml
data/: cmudict.dict
data/language-varieties/en-GB-RP/: manifest.toml  pronunciation-rules.toml
data/language-varieties/en-US/: acoustic-tweaks.toml  lexicon.toml  manifest.toml  morphophonology.toml  phoneme-inventory.toml  phonology.toml  phrase-rules.toml  pronunciation-rules.json  prosody-rules.toml  punctuation-rules.toml  spelling-rules.toml  vowel-targets.toml
docs/: golden-trace-fixtures.md  irl-duplex-smoke-test.md  language-varieties.md  soundscape-debug.md  speech-ir-spine.md  synthetic-ir-spine.md
docs/architecture/: diphone-cache.md  espeak-ng-language-pack-inventory-audit.md  espeak-ng-riper-import-audit.md  input-router-session-clock.md  language-pack-source-inventory.md  narrator-runtime-architecture.md  riper-link-grammar-evaluation.md  riper-link-grammar-mapping.md  riper-link-grammar-native-audit.md  runtime-event-compatibility.md  soundscape-integration-order.md  speech-hypothesis-engine.md  speech-pipeline.md  unified-cross-modal-text-span-architecture.md  unified-cross-modal-text-span-follow-up-tickets.md  visual-speech-backend.md  wavedeck-editor-architecture.md
docs/legal/: mbrola-psola-audit.md
examples/: irl-duplex-smoke-test.md
examples/browser-transcript-player/: app.js  demo.json  index.html  live-session-reducer.test.js  live-trace.sample.jsonl  live-trace.sample.viewer.json  styles.css
examples/browser-transcript-player/fixtures/: demo.json  live-trace.sample.jsonl  live-trace.sample.viewer.json  visual-speech-did-deep.json
examples/mbrola/: hello-us1.pho  hello-us3.pho
fixtures/soundscape/: sample_debug_view.json
fixtures/traces/half_duplex_clean/: expected_key_spans.json  expected_screenplay.txt  expected_viewer_payload.json  input.jsonl
fixtures/traces/pete_self_leakage/: expected_key_spans.json  expected_screenplay.txt  expected_viewer_payload.json  input.jsonl
fixtures/traces/user_interrupts_pete/: expected_key_spans.json  expected_screenplay.txt  (+2 more)
listenbury_data/memory/: draft_work_board.json  go_work_board.json
ryan/: listenbury-diphone-voice.json
scripts/: irl-duplex-smoke-test.sh  praat_syllable_nuclei.praat
src/: config.rs  diagnostics.rs  event.rs  lib.rs  live_trace.rs  loop_trace.rs  main.rs  perception.rs  playback_check.rs  runtime.rs  runtime_event.rs  soundscape.rs  span.rs  speculative.rs  speech_timeline.rs  text_stability.rs  time.rs
src/acoustic/: mod.rs  model.rs  neural.rs  registry.rs  source_filter.rs  speecht5.rs
src/audio/: acoustic.rs  boundary.rs  capture.rs  dtw.rs  features.rs  frame.rs  hypothesis.rs  lattice.rs  mod.rs  noise_floor.rs  normalize.rs  phone_class.rs  ring.rs  speech_likelihood.rs  streaming_prosody.rs  viterbi.rs  voice_signature.rs  voice_vector.rs  wav.rs
src/cli/: args.rs  download_progress.rs  live_session.rs  mod.rs  model_paths.rs  piper.rs  tests.rs
src/hearing/: attention.rs  audition.rs  breath.rs  environment.rs  mod.rs  sound_classify.rs  suppression.rs  utterance.rs  vad.rs
src/linguistic/: arpabet.rs  cmudict.rs  environment.rs  inventory.rs  language_pack.rs  language_pack_rules.rs  language_variety.rs  mod.rs  orthography.rs  phone.rs  phoneme.rs  phonology.rs  pronounce.rs  realization.rs  rule_registry.rs  service.rs  sound_it_out.rs  variety.rs
src/memory/: embed.rs  journal.rs  known_voice.rs  mod.rs  neo4j.rs  qdrant.rs  sink.rs  trace.rs  worker.rs
src/mind/: context.rs  controller.rs  entity.rs  episodic.rs  llama_cpp.rs  llm.rs  mod.rs  prompt.rs  turn.rs
src/models/: download.rs  manifest.rs  mod.rs  paths.rs
src/mouth/: backend.rs  cache.rs  mod.rs  piper.rs  planner.rs  player.rs  read_aloud.rs  tts.rs
src/prosody/: midi.rs  mod.rs  note_target.rs  phonotactics.rs  pitch_curve.rs  singing.rs  syllabification.rs  syllable.rs  vibrato.rs
src/segmentation/: boundary_hypotheses.rs  mod.rs  nuclei.rs  syllable_regions.rs  word_regions.rs
src/soundscape/: attribution.rs  criteria.rs  debug.rs  event.rs  expected.rs  frame.rs  isolation.rs  mod.rs  overlap.rs  pipeline.rs  signature.rs  source.rs  time.rs  transcript.rs  voice_count.rs
src/speech/: breath_asr.rs  canonical_plan.rs  loom.rs  mod.rs  phone_plan.rs  pipeline.rs  prosody_timing.rs  recognizer.rs  synthetic_plan.rs  transcript.rs  whisper.rs  work.rs
src/trace/: golden.rs  mod.rs  timestamp_sanity.rs  viewer_payload.rs
src/vision/: linux_video.rs  mod.rs  speech.rs  vector.rs
src/vocoder/: bigvgan.rs  capability.rs  diffwave.rs  hifigan.rs  input.rs  klatt.rs  mbrola.rs  mel_debug.rs  mod.rs  neural_onnx.rs  piper.rs  registry.rs  riper.rs  source_filter.rs  source_filter_mel.rs  speecht5_mel.rs
src/voice/: articulator.rs  coarticulation.rs  mod.rs  vocal_plausibility.rs
src/web/: assets.rs  mod.rs  server.rs
src/word/: export.rs  mod.rs  stream.rs  tts_export.rs
tests/: browser_transcript_player_demo.rs  golden_traces.rs  live_trace_viewer_payload.rs  mbrola_smoke.rs  module_surface_paths.rs  native_piper_backend_scaffold.rs  pipeline_smoke.rs  riper_backend_scaffold.rs
web/browser-transcript-player/: app.js  energy-timing.mjs  energy-timing.test.mjs  graph-inspection-adapter.test.js  hypothesis-lattice.mjs  hypothesis-lattice.test.mjs  index.html  live-session-reducer.test.js  mechanical-asr.mjs  mechanical-asr.test.mjs  phoneme-projection.mjs  phoneme-projection.test.mjs  replay.html  replay.js  scene-heading.mjs  scene-heading.test.mjs  screenplay-model.mjs  screenplay-model.test.mjs  screenplay.css  screenplay.html  screenplay.js  shared-span-model.mjs  shared-span-model.test.mjs  spectrogram.mjs  spectrogram.test.mjs  styles.css  timeline-viewport.mjs  timeline-viewport.test.mjs  trace-session.mjs  trace-session.test.mjs  viterbi-phone-alignment.mjs  viterbi-phone-alignment.test.mjs  wavedeck-editor-model.mjs  wavedeck-editor-model.test.mjs
xtask/: Cargo.toml
xtask/src/: main.rs
(+123 files in other folders)
