[package]
name = "listenbury"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.18"
owo-colors = "4"
crossbeam-channel = "0.5"
rtrb = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
encoding_rs = { version = "0.8", optional = true }
hound = "3"
ctrlc = "3.5.2"
seams = "0.1.1"

[features]
default = [
    "audio-cpal",
    "resample-rubato",
    "vad-webrtc",
    "llm-llama-cpp",
    "asr-whisper",
    "asr-whisper-async",
    "asr-whisper-quantization",
    "tts-piper",
    "vision-webcam",
    "model-download",
]
audio-cpal = ["dep:cpal"]
resample-rubato = ["dep:rubato"]
vad-silero = []
vad-webrtc = ["dep:webrtc-vad"]
llm-llama-cpp = ["dep:encoding_rs", "dep:llama-cpp-2", "llama-cpp-2/sampler"]
llm-llama-cpp-cuda = ["llm-llama-cpp", "llama-cpp-2/cuda"]
asr-whisper = ["dep:whisper-cpp-plus"]
asr-whisper-async = ["asr-whisper", "whisper-cpp-plus/async"]
asr-whisper-cuda = ["asr-whisper", "whisper-cpp-plus/cuda"]
asr-whisper-metal = ["asr-whisper", "whisper-cpp-plus/metal"]
asr-whisper-quantization = ["asr-whisper", "whisper-cpp-plus/quantization"]
tts-piper = []
vision-webcam = []
model-download = ["dep:ureq", "dep:dirs"]

[dependencies.cpal]
version = "0.15"
optional = true

[dependencies.rubato]
version = "0.16"
optional = true

[dependencies.llama-cpp-2]
version = "0.1.146"
optional = true
default-features = false

[dependencies.whisper-cpp-plus]
version = "0.1.4"
optional = true
default-features = false

[dependencies.webrtc-vad]
version = "0.4"
optional = true

[dependencies.ureq]
version = "3"
optional = true
default-features = false
features = ["rustls"]

[dependencies.dirs]
version = "6"
optional = true
