[package]
name = "listenbury"
version = "0.1.0"
edition = "2024"
default-run = "listenbury"

[dependencies]
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
indicatif = "0.18"
inquire = { version = "0.9.4", optional = true }
owo-colors = "4"
crossbeam-channel = "0.5"
rtrb = "0.3"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
midly = "0.5"
uuid = { version = "1", features = ["v4", "serde"] }
encoding_rs = { version = "0.8", optional = true }
hound = "3"
ctrlc = "3.5.2"
seams = "0.1.1"
tsrun = "0.1.23"

[features]
default = [
    "audio-cpal",
    "resample-rubato",
    "vad-silero",
    "vad-webrtc",
    "tts-piper",
    "tts-onnx",
    "piper-compat",
    "vocoder-klatt",
    "vocoder-diphone",
    "vocoder-hifigan",
    "vision-webcam",
    "model-download",
]
audio-cpal = ["dep:cpal"]
resample-rubato = ["dep:rubato"]
vad-silero = []
vad-webrtc = ["dep:webrtc-vad"]
llm-llama-cpp = ["dep:encoding_rs", "dep:llama-cpp-2", "dep:llama-cpp-sys-2", "llama-cpp-2/sampler"]
llm-llama-cpp-cuda = ["llm-llama-cpp", "llama-cpp-2/cuda", "llama-cpp-sys-2/cuda"]
asr-whisper = ["dep:whisper-cpp-plus"]
asr-whisper-async = ["asr-whisper", "whisper-cpp-plus/async"]
asr-whisper-cuda = ["asr-whisper", "whisper-cpp-plus/cuda"]
asr-whisper-metal = ["asr-whisper", "whisper-cpp-plus/metal"]
asr-whisper-quantization = ["asr-whisper", "whisper-cpp-plus/quantization"]
tts-piper = []
tts-onnx = ["dep:ort"]
piper-compat = ["tts-piper", "tts-onnx"]
vocoder-klatt = []
vocoder-diphone = []
vocoder-hifigan = ["tts-onnx"]
tts-riper = ["piper-compat"]
vision-webcam = []
model-download = ["dep:ureq", "dep:dirs", "dep:inquire"]

[dependencies.cpal]
version = "0.15"
optional = true

[dependencies.rubato]
version = "0.16"
optional = true

[dependencies.llama-cpp-2]
git = "https://github.com/utilityai/llama-cpp-rs.git"
rev = "6feffc60b5277b1fb9a718857736194cfdc736ac"
optional = true
default-features = false

[dependencies.llama-cpp-sys-2]
git = "https://github.com/utilityai/llama-cpp-rs.git"
rev = "6feffc60b5277b1fb9a718857736194cfdc736ac"
optional = true
default-features = false

[dependencies.whisper-cpp-plus]
version = "0.1.4"
optional = true
default-features = false

[dependencies.webrtc-vad]
version = "0.4"
optional = true

[dependencies.ureq]
version = "3"
optional = true
default-features = false
features = ["rustls"]

[dependencies.dirs]
version = "6"
optional = true

[dependencies.ort]
version = "=2.0.0-rc.12"
optional = true
default-features = false
features = ["load-dynamic", "api-23"]

[dependencies.toml]
version = "0.8"
features = ["parse"]

[dev-dependencies]
tempfile = "3"
